--- a/shop.html
+++ b/shop.html
@@ -280,7 +280,7 @@
           class="middle_screen_header container d-flex flex-column justiify-content-between"
         >
           <p><small>#Fashion Wall</small></p>
-          <div class="display-3">New Design 2020</div>
+          <div class="h2">New Design 2020</div>
           <div class="middle_screen_btn text-center mt-4">
             Shop Now
           </div>
@@ -418,7 +418,7 @@
     <!-- js part -->
 
     <script src="lib/jquery-3.5.1.min.js"></script>
-    <script src="lib/popper.js"></script>
+   
     <script src="lib/bootstrap-4.3.1.min.js"></script>
 
     <!-- slick carousel library -->
