Same commit of shop display text

--- a/shop.html
+++ b/shop.html
@@ -280,7 +280,7 @@
           class="middle_screen_header container d-flex flex-column justiify-content-between"
         >
           <p><small>#Fashion Wall</small></p>
-          <div class="h2">New Design 2020</div>
+          <div style="font-size:15%">New Design 2020</div>
           <div class="middle_screen_btn text-center mt-4">
             Shop Now
           </div>
