--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
     <link rel="stylesheet" href="css/swip_animation.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -153,7 +153,7 @@
       <div class="bg"></div>
       <div class="srv_wrapper">
         <div class="srv_container">
-          <div class="srv_side1 col-4 col-md-4 col-sm-4 col-lg-6 col-xl-6">
+          <div class="srv_side1 col-6 col-md-4 col-sm-4 col-lg-6 col-xl-6">
             <div class="srv_elm">
               <div
                 class="srv_elm_header d-fle flex-column justify-content-between"
@@ -199,7 +199,7 @@
 
       <div class="cat_wrapper">
         <div class="cat_conatiner">
-          <div class="cat_top">
+          <div class="cat_top p-3">
             <div class="cat_top_header">
               <h4>CATALOG</h4>
               <p>Lorem ipsum dolor sit amet consectetur.</p>
@@ -271,6 +271,18 @@
           </div>
         </div>
         <div class="op_lower">
+          <div class="op_lower_map position-relative">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3844.189467390555!2d32.54348368525753!3d15.527970510519664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe5fefc8ffdaef21e!2zVGVjaG5pYyBwcm9mZXNzaW9uYWxzIGZvciBpbnRlZ3JhdGVkINiq2YrZg9mG2YMg2KjYsdmI2YHZiti02YbYp9mEINmE2YTYrdmE2YjZhCDYp9mE2YXYqtmD2KfZhdmE2Kk!5e0!3m2!1sen!2s!4v1589547878181!5m2!1sen!2s"
+              class="bg-dark-green position-relative"
+              height="auto"
+              frameborder="0"
+              style="height: 50vh; width: 100vw;"
+              allowfullscreen=""
+              aria-hidden="false"
+              tabindex="0"
+            ></iframe>
+          </div>
           <div class="op_lower_wrapper">
             <div class="op_lower_inner">
               <div class="op_lower_content">
@@ -366,11 +378,56 @@
                     ></i>
                   </div>
                 </div>
-
-                <div class="op_view_more mt-4">
-                  SHOW MORE
+                <div class="line d-flex flex-row justify-content-between">
+                  <div
+                    class="line_day_desc p-2 d-flex flex-row align-items-center"
+                  >
+                    <div class="line_day text-center pt-2">
+                      <h4>10</h4>
+                      <small>2020.05</small>
+                    </div>
+                  </div>
+                  <div
+                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                  >
+                    <p class="text-dark">
+                      Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                  </div>
+                  <div class="line_btn p-3">
+                    <i
+                      class="fa fa-clock text-primary p-2"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                </div>
+                <div class="line d-flex flex-row justify-content-between">
+                  <div
+                    class="line_day_desc p-2 d-flex flex-row align-items-center"
+                  >
+                    <div class="line_day text-center pt-2">
+                      <h4>10</h4>
+                      <small>2020.05</small>
+                    </div>
+                  </div>
+                  <div
+                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                  >
+                    <p class="text-dark">
+                      Lorem ipsum dolor sit amet consectetur.
+                    </p>
+                  </div>
+                  <div class="line_btn p-3">
+                    <i
+                      class="fa fa-clock text-primary p-2"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
                 </div>
               </div>
+            </div>
+            <div class="op_view_more text-center mt-3 my-4">
+              SHOW LESS
             </div>
           </div>
         </div>
@@ -397,6 +454,21 @@
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.3.1.min.js"></script>
 
+    <script>
+      $(document).ready(function () {
+        $('.op_view_more').click(function () {
+          if ($(this).text() === 'SHOW MORE') {
+            $('.op_view_more').text('SHOW LESS');
+          } else {
+            $('.op_view_more').text('SHOW ALL');
+          }
+
+          $('.op_lower_wrapper').toggleClass('op_lower_wrapper_fade');
+
+          $('.op_lower_inner').slideToggle('slow', 'swing');
+        });
+      });
+    </script>
     <!-- navigation -->
     <script>
       $(document).ready(function () {
