update category and cart page

--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/shop.css" />
 
@@ -72,30 +72,37 @@
       <br />
       <div class="center row d-flex justify-content-around">
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
-          <div class="cat_img1">
+          <a href="category.html?category=Electronics"> <div class="cat_img1">
             <div class="cat_header">
-              <div class="h3">Electronics</div>
+              <div class="h3 text-dark">Electronics</div>
             </div>
             <img src="img/products/Electronics/cover.jpg" alt="" />
-          </div>
+          </div> </a>
+          
         </div>
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
-          <div class="cat_header"><div class="h3">Clothes</div></div>
+          <a href="category.html?category=clothes">
+            <div class="cat_header"><div class="h3 text-dark">Clothes</div></div>
           <div class="cat_img2">
             <img src="img/products/clothes/cover.jpg" alt="" />
           </div>
+          </a>
         </div>
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
-          <div class="cat_header"><div class="h3 text-white">Food</div></div>
+          <a href="category.html?category=food">
+            <div class="cat_header"><div class="h3 text-white">Food</div></div>
           <div class="cat_img3">
             <img src="img/products/Food/cover.jpg" alt="" />
           </div>
+          </a>
         </div>
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
-          <div class="cat_header"><div class="h3">Furnitures</div></div>
+          <a href="category.html?category=furniture">
+            <div class="cat_header"><div class="h3 text-dark">Furnitures</div></div>
           <div class="cat_img4">
             <img src="img/products/Furnitures/cover.jpg" alt="" />
           </div>
+          </a>
         </div>
       </div>
       <br />
@@ -280,7 +287,7 @@
           class="middle_screen_header container d-flex flex-column justiify-content-between"
         >
           <p><small>#Fashion Wall</small></p>
-          <div style="font-size:15%">New Design 2020</div>
+          <div style="font-size:10vw">New Design 2020</div>
           <div class="middle_screen_btn text-center mt-4">
             Shop Now
           </div>
