soe changes on all of website

--- a/cart.html
+++ b/cart.html
@@ -73,9 +73,7 @@
             >
               <a href="#" class="text-dark text-fade">Category</a>
               <img src="img/icons/next (1).png" width="16" height="16" />
-              <a href="#" class="text-dark text-fade">Furniture</a
-              ><img src="img/icons/next (1).png" width="16" height="16" />
-              <a href="#" class="text-dark">Shelfs</a>
+              <a href="#" class="text-dark text-fade">Furniture</a>
             </div>
             <div
               class="cat_social_media d-flex flex-row justify-content-between align-items-center w-10"
@@ -111,14 +109,14 @@
               <div
                 class="cart_main_desc_header_holder d-flex flex-column align-items-center justify-content-around h-60"
               >
-                <div class="cart_main_desc_title h3 pt-4">Cotton T-shirt</div>
+                <div class="cart_main_desc_title h3 pt-4" style="font-size: 5vw;border-bottom: 2px solid #007bff;text-transform: capitalize;">Cotton T-shirt</div>
                 <div class="cart_main_desc_desc text-center small-16 text-fade">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Magni voluptatem soluta architecto reprehenderit possimus
                   beatae eos, expedita alias molestias, odio quidem.
                   Exercitationem?
                 </div>
-                <div class="cart_main_desc_price h3" value="25.00"></div>
+                <div class="cart_main_desc_price h3" style="font-size: 8vw;color: #37c358 ;font-weight: 400;" value="25.00"></div>
               </div>
               <div
                 class="cart_main_desc_call_to_action d-flex flex-lg-row flex-column justify-content-between align-items-center h-25"
