--- a/category.html
+++ b/category.html
@@ -72,11 +72,9 @@
             <div
               class="d-flex align-items-center justify-content-around text-muted w-30"
             >
-              <a href="#" class="text-dark text-fade">Category</a>
-              <img src="img/icons/next (1).png" width="16" height="16" />
-              <a href="#" class="text-dark text-fade">Furniture</a
-              ><img src="img/icons/next (1).png" width="16" height="16" />
-              <a href="#" class="text-dark">Shelfs</a>
+            <a href="#" class="text-dark text-fade">Category</a>
+            <img src="img/icons/next (1).png" width="16" height="16" />
+            <a href="#" class="text-dark text-fade">Furniture</a>
             </div>
             <div
               class="cat_social_media d-flex flex-row justify-content-between align-items-center w-10"
