Buying button working with email

--- a/cart.html
+++ b/cart.html
@@ -140,7 +140,7 @@
                     "
                   />
                 </div>
-                <div
+                <a href="#"
                   class="col-12 col-sm-12 col-md-12 col-lg-5 cart_main_desc_buy_btn p-2 m-3 bg-matte text-white"
                 >
                   <div
@@ -150,7 +150,7 @@
                     <i class="fa fa-shopping-cart"></i>
                     <p class="h5 p-0 m-0">buy</p>
                   </div>
-                </div>
+                </a>
                 <div
                   class="col-12 col-sm-12 col-md-12 col-lg-3 cart_main_desc_fav_btn text-center border-fade"
                 >
