--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/swip_animation.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -30,9 +30,9 @@
         <div class="nav_logo">
           <h1>
             <img
-              src="img/logo/full.png"
-              width="100"
-              height="100"
+              src="img/logo/full_1.png"
+              width="50"
+              height="50"
               class="rounded"
               alt=""
             />
