--- a/category.html
+++ b/category.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/cat.css" />
 
@@ -72,9 +72,9 @@
             <div
               class="d-flex align-items-center justify-content-around text-muted w-30"
             >
-            <a href="#" class="text-dark text-fade">Category</a>
-            <img src="img/icons/next (1).png" width="16" height="16" />
-            <a href="#" class="text-dark text-fade">Furniture</a>
+              <a href="#" class="text-dark text-fade">Category</a>
+              <img src="img/icons/next (1).png" width="16" height="16" />
+              <a href="#" class="text-dark text-fade">Furniture</a>
             </div>
             <div
               class="cat_social_media d-flex flex-row justify-content-between align-items-center w-10"
@@ -177,9 +177,17 @@
                   <div class="h6">
                     SUDAN KHARTOUM,CENTERAL MARKET
                   </div>
-                  <div class="h6"><a href="tel:0912734315" class="text-dark">+249912734315</a></div>
                   <div class="h6">
-                    <a href="mailto:<nowiki>mohamedx.28@gmail.com?subject="TECHNIC PROFESSIONAL emails:" class="text-dark">mohamedx.28@gmail.com</a>
+                    <a href="tel:+249912734315" class="text-dark"
+                      >+249912734315</a
+                    >
+                  </div>
+                  <div class="h6">
+                    <a
+                      href="mailto:mohamedx.28@gmail.com?subject=TECHNIC PROFESSIONAL Visitors :"
+                      class="text-dark"
+                      >mohamedx.28@gmail.com</a
+                    >
                   </div>
                 </div>
               </div>
