--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/shop.css" />
 
