--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- top-nav -->
     <nav id="top_nav" class="navbar navbar-expand-md p-0 sticky-top">
       <div class="container-fluid">
-        <div class="nav_logo">
+        <a href="/" class="nav_logo">
           <h1>
             <img
               src="img/logo/full_1.png"
@@ -37,7 +37,7 @@
               alt=""
             />
           </h1>
-        </div>
+        </a>
         <button
           class="navbar-toggler border-0"
           type="button"
