--- a/index.html
+++ b/index.html
@@ -287,10 +287,8 @@
             <div class="op_lower_inner">
               <div class="op_lower_content">
                 <div class="line d-flex flex-row justify-content-between">
-                  <div
-                    class="line_day_desc p-2 d-flex flex-row align-items-center"
-                  >
-                    <div class="line_day text-center pt-2">
+                  <div class="line_day_desc d-flex flex-row align-items-center">
+                    <div class="line_day text-center">
                       <h4>10</h4>
                       <small>2020.05</small>
                     </div>
@@ -310,10 +308,8 @@
                   </div>
                 </div>
                 <div class="line d-flex flex-row justify-content-between">
-                  <div
-                    class="line_day_desc p-2 d-flex flex-row align-items-center"
-                  >
-                    <div class="line_day text-center pt-2">
+                  <div class="line_day_desc d-flex flex-row align-items-center">
+                    <div class="line_day text-center">
                       <h4>10</h4>
                       <small>2020.05</small>
                     </div>
@@ -333,10 +329,8 @@
                   </div>
                 </div>
                 <div class="line d-flex flex-row justify-content-between">
-                  <div
-                    class="line_day_desc p-2 d-flex flex-row align-items-center"
-                  >
-                    <div class="line_day text-center pt-2">
+                  <div class="line_day_desc d-flex flex-row align-items-center">
+                    <div class="line_day text-center">
                       <h4>10</h4>
                       <small>2020.05</small>
                     </div>
@@ -356,10 +350,8 @@
                   </div>
                 </div>
                 <div class="line d-flex flex-row justify-content-between">
-                  <div
-                    class="line_day_desc p-2 d-flex flex-row align-items-center"
-                  >
-                    <div class="line_day text-center pt-2">
+                  <div class="line_day_desc d-flex flex-row align-items-center">
+                    <div class="line_day text-center">
                       <h4>10</h4>
                       <small>2020.05</small>
                     </div>
@@ -379,10 +371,8 @@
                   </div>
                 </div>
                 <div class="line d-flex flex-row justify-content-between">
-                  <div
-                    class="line_day_desc p-2 d-flex flex-row align-items-center"
-                  >
-                    <div class="line_day text-center pt-2">
+                  <div class="line_day_desc d-flex flex-row align-items-center">
+                    <div class="line_day text-center">
                       <h4>10</h4>
                       <small>2020.05</small>
                     </div>
