opening hours update 4

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
     <link rel="stylesheet" href="css/swip_animation.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -288,13 +288,13 @@
               <div class="op_lower_content">
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
-                    <div class="line_day text-center">
+                    <div class="line_day text-center mb-2">
                       <h4>10</h4>
                       <small>2020.05</small>
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
                     <p class="text-dark">
                       Lorem ipsum dolor sit amet consectetur.
@@ -315,7 +315,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
                     <p class="text-dark">
                       Lorem ipsum dolor sit amet consectetur.
@@ -336,7 +336,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
                     <p class="text-dark">
                       Lorem ipsum dolor sit amet consectetur.
@@ -357,7 +357,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
                     <p class="text-dark">
                       Lorem ipsum dolor sit amet consectetur.
@@ -378,7 +378,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
                     <p class="text-dark">
                       Lorem ipsum dolor sit amet consectetur.
@@ -401,7 +401,7 @@
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-10 ml-2 d-flex align-self-middle"
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
                     <p class="text-dark">
                       Lorem ipsum dolor sit amet consectetur.
