--- a/index.html
+++ b/index.html
@@ -63,38 +63,54 @@
       <div class="buttons-wrapper">
         <div class="element_holder">
           <div class="element1">
-            <div class="elm_header"><small>asdasdasdas</small></div>
+            <div
+              class="elm_header d-flex justify-content-lg-start justify-content-center"
+            >
+              <small>building</small>
+            </div>
             <div
               class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center d-flex flex-column flex-lg-row justify-content-between align-items-center"
             >
-              <h6>asdasdas</h6>
+              <h6>Lorem.</h6>
               <i class="fas fa-building" aria-hidden="true"></i>
             </div>
           </div>
           <div class="element2">
-            <div class="elm_header"><small>asdasdasdas</small></div>
+            <div
+              class="elm_header d-flex justify-content-lg-start justify-content-center d-flex justify-content-lg-start justify-content-center"
+            >
+              <small>settings</small>
+            </div>
             <div
               class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center"
             >
-              <h6>asdasdas</h6>
+              <h6>Lorem.</h6>
               <i class="fas fa-cog" aria-hidden="true"></i>
             </div>
           </div>
           <div class="element3">
-            <div class="elm_header"><small>asdasdasdas</small></div>
+            <div
+              class="elm_header d-flex justify-content-lg-start justify-content-center"
+            >
+              <small>prople</small>
+            </div>
             <div
               class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center"
             >
-              <h6>asdasdas</h6>
+              <h6>Lorem.</h6>
               <i class="fas fa-user" aria-hidden="true"></i>
             </div>
           </div>
           <div class="element4">
-            <div class="elm_header"><small>asdasdasdas</small></div>
+            <div
+              class="elm_header d-flex justify-content-lg-start justify-content-center"
+            >
+              <small>contracts</small>
+            </div>
             <div
               class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center"
             >
-              <h6>asdasdas</h6>
+              <h6>Lorem.</h6>
               <i class="fas fa-book" aria-hidden="true"></i>
             </div>
           </div>
