--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img class="slider1" src="img/logo/logo.png" alt="" />
-          <div class="caption">
-            <!-- <div class="display-4">Lorem, ipsum dolor.</div>
-            <p class="font-8">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum,
-              unde accusamus!
-            </p> -->
-          </div>
+          <img
+            class="slider1"
+            src="img/logo/logo.png"
+            width="100"
+            height="100"
+            alt=""
+          />
+          <div class="caption"></div>
         </div>
 
         <div class="swiper-slide">
