--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
           <img
             class="slider1"
             src="img/logo/logo.png"
-            width="100"
-            height="100"
+            style="object-fit: cover !important;"
             alt=""
           />
           <div class="caption"></div>
