--- a/index.html
+++ b/index.html
@@ -119,12 +119,7 @@
 
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img
-            class="slider1"
-            src="img/logo/logo.png"
-            style="object-fit: cover !important;"
-            alt=""
-          />
+          <img class="slider1" src="img/logo/logo1.png" alt="" />
           <div class="caption"></div>
         </div>
 
