shopping_cart Update

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -60,7 +60,7 @@
     <div class="big_head display-4 text-center pt-5 mt-2 pb-4">
       My Shopping Cart
     </div>
-    <div class="table-responsive">
+    <div class="table-responsive container pt-5">
       <table class="table table-striped bg-white border-top-0">
         <thead>
           <tr class="text-center">
