--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -46,10 +46,24 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto pl-4 col-md-6">
-            <li class="nav-item"><a href="#" class="nav-link">SERVICES</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">CATALOG</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">OPENING</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
+            <li class="nav-item">
+              <a href="category.html?category=clothes" class="nav-link"
+                >Clothes</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="category.html?category=food" class="nav-link">Food</a>
+            </li>
+            <li class="nav-item">
+              <a href="category.html?category=furniture" class="nav-link"
+                >Furnitures</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="category.html?category=Electronics" class="nav-link"
+                >Electronics</a
+              >
+            </li>
           </ul>
         </div>
       </div>
