--- a/cart.html
+++ b/cart.html
@@ -295,7 +295,7 @@
     <!-- Optional JavaScript -->
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.3.1.min.js"></script>
-
+    <script src="lib/smtp.js"></script>
     <script>
       $(document).ready(function(){
         $(".like_btn").click(function(){
