index slider image position

--- a/index.html
+++ b/index.html
@@ -119,7 +119,12 @@
 
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img class="slider1" src="img/logo/logo1.png" alt="" />
+          <img
+            class="slider1"
+            src="img/logo/logo.png"
+            alt=""
+            style="object-fit: cover; object-position: center;"
+          />
           <div class="caption"></div>
         </div>
 
