index little design tuches

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
     <link rel="stylesheet" href="css/swip_animation.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -217,7 +217,7 @@
           <div class="cat_top p-3">
             <div class="cat_top_header">
               <h4>CATALOG</h4>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
+              <p>We have a small shop you can check.</p>
             </div>
             <a href="shop.html" class="cat_top_btn">EXPLORE</a>
           </div>
@@ -228,43 +228,55 @@
                 <div
                   class="img_desc d-flex flex-column align-items-center pt-1"
                 >
-                  <small>LOADING $ REEL</small>
-                  <h6 class="">Lorem, ipsum.</h6>
+                  <small>Clothing</small>
+                  <h6 class="text-center" style="line-height: 0.8rem;">
+                    <small>We have multi different Types</small>
+                  </h6>
                 </div>
               </div>
 
               <div class="d-flex justify-content-center mb-2">
-                <a href="#" class="text-white">VIEW MORE</a>
+                <a href="category.html?category=clothes" class="text-white"
+                  ><small>VIEW MORE</small></a
+                >
               </div>
             </div>
             <div class="cat_img_card2">
               <div class="img_card_holder">
                 <img src="img/photo-1568276707473-b77ec902b43d.jpg" alt="" />
                 <div
-                  class="img_desc d-flex flex-column align-items-center pt-1"
+                  class="img_desc d-flex flex-column align-items-center text-center pt-1"
                 >
-                  <small>LOADING $ REEL</small>
-                  <h6 class="">Lorem, ipsum.</h6>
+                  <small>Householding</small>
+                  <h6 class="" style="line-height: 0.8rem;">
+                    <small>Householder Tools for Daily uses</small>
+                  </h6>
                 </div>
               </div>
 
               <div class="d-flex justify-content-center mb-2">
-                <a href="#" class="text-white">VIEW MORE</a>
+                <a href="category.html?category=Electronics" class="text-white"
+                  ><small>VIEW MORE</small></a
+                >
               </div>
             </div>
             <div class="cat_img_card3">
               <div class="img_card_holder">
                 <img src="img/photo-1568276707473-b77ec902b43d.jpg" alt="" />
                 <div
-                  class="img_desc d-flex flex-column align-items-center pt-1"
+                  class="img_desc d-flex flex-column align-items-center pt-1 text-center"
                 >
-                  <small>LOADING $ REEL</small>
-                  <h6 class="">Lorem, ipsum.</h6>
+                  <small style="line-height: 0.8rem;">Consumption Goods</small>
+                  <h6 class="text-center" style="line-height: 0.8rem;">
+                    <small>Canded Goods Specialy</small>
+                  </h6>
                 </div>
               </div>
 
               <div class="d-flex justify-content-center mb-2">
-                <a href="#" class="text-white">VIEW MORE</a>
+                <a href="category.html?category=food" class="text-white"
+                  ><small>VIEW MORE</small></a
+                >
               </div>
             </div>
           </div>
@@ -303,21 +315,20 @@
               <div class="op_lower_content">
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
-                    <div class="line_day text-center mb-2">
-                      <h4>10</h4>
-                      <small>2020.05</small>
+                    <div class="line_day text-center">
+                      <h1>SAT</h1>
                     </div>
                   </div>
                   <div
-                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle text-center"
                   >
-                    <p class="text-dark">
-                      Lorem ipsum dolor sit amet consectetur.
+                    <p class="text-dark text-center h5">
+                      opened
                     </p>
                   </div>
                   <div class="line_btn p-3">
                     <i
-                      class="fa fa-clock text-primary p-2"
+                      class="fa fa-clock text-primary fa-2x p-2"
                       aria-hidden="true"
                     ></i>
                   </div>
@@ -325,20 +336,19 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h4>10</h4>
-                      <small>2020.05</small>
+                      <h1>SUN</h1>
                     </div>
                   </div>
                   <div
                     class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
-                    <p class="text-dark">
-                      Lorem ipsum dolor sit amet consectetur.
+                    <p class="text-dark text-center h5">
+                      opened
                     </p>
                   </div>
                   <div class="line_btn p-3">
                     <i
-                      class="fa fa-clock text-primary p-2"
+                      class="fa fa-clock text-primary fa-2x p-2"
                       aria-hidden="true"
                     ></i>
                   </div>
@@ -346,20 +356,19 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h4>10</h4>
-                      <small>2020.05</small>
+                      <h1>MON</h1>
                     </div>
                   </div>
                   <div
                     class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
-                    <p class="text-dark">
-                      Lorem ipsum dolor sit amet consectetur.
+                    <p class="text-dark text-center h5">
+                      Off day
                     </p>
                   </div>
                   <div class="line_btn p-3">
                     <i
-                      class="fa fa-clock text-warning p-2"
+                      class="fa fa-clock text-warning fa-2x p-2"
                       aria-hidden="true"
                     ></i>
                   </div>
@@ -367,20 +376,19 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h4>10</h4>
-                      <small>2020.05</small>
+                      <h1>TUE</h1>
                     </div>
                   </div>
                   <div
                     class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
-                    <p class="text-dark">
-                      Lorem ipsum dolor sit amet consectetur.
+                    <p class="text-dark text-center h5">
+                      opened
                     </p>
                   </div>
                   <div class="line_btn p-3">
                     <i
-                      class="fa fa-clock text-primary p-2"
+                      class="fa fa-clock text-primary fa-2x p-2"
                       aria-hidden="true"
                     ></i>
                   </div>
@@ -388,20 +396,19 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h4>10</h4>
-                      <small>2020.05</small>
+                      <h1>WED</h1>
                     </div>
                   </div>
                   <div
                     class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
-                    <p class="text-dark">
-                      Lorem ipsum dolor sit amet consectetur.
+                    <p class="text-dark text-center h5">
+                      opened
                     </p>
                   </div>
                   <div class="line_btn p-3">
                     <i
-                      class="fa fa-clock text-primary p-2"
+                      class="fa fa-clock text-primary fa-2x p-2"
                       aria-hidden="true"
                     ></i>
                   </div>
@@ -411,20 +418,41 @@
                     class="line_day_desc p-2 d-flex flex-row align-items-center"
                   >
                     <div class="line_day text-center pt-2">
-                      <h4>10</h4>
-                      <small>2020.05</small>
+                      <h1>THU</h1>
                     </div>
                   </div>
                   <div
                     class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
                   >
-                    <p class="text-dark">
-                      Lorem ipsum dolor sit amet consectetur.
+                    <p class="text-dark text-center h5">
+                      still opened
                     </p>
                   </div>
                   <div class="line_btn p-3">
                     <i
-                      class="fa fa-clock text-primary p-2"
+                      class="fa fa-clock text-primary fa-2x p-2"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                </div>
+                <div class="line d-flex flex-row justify-content-between">
+                  <div
+                    class="line_day_desc p-2 d-flex flex-row align-items-center"
+                  >
+                    <div class="line_day text-center pt-2">
+                      <h1>FRI</h1>
+                    </div>
+                  </div>
+                  <div
+                    class="line_desc mt-4 font-8 ml-2 d-flex align-self-middle"
+                  >
+                    <p class="text-dark text-center h5">
+                      Closed
+                    </p>
+                  </div>
+                  <div class="line_btn p-3">
+                    <i
+                      class="fa fa-clock text-danger fa-2x p-2"
                       aria-hidden="true"
                     ></i>
                   </div>
