decreases images resolution

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/swip_animation.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -547,7 +547,7 @@
         spaceBetween: 30,
         centeredSlides: true,
         autoplay: {
-          delay: 5000,
+          delay: 10000,
           disableOnInteraction: false,
         },
         navigation: {
