--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/shop.css" />
 
@@ -126,12 +126,11 @@
     <section class="most_sell">
       <div class="most_sell_header text-center">
         <h1 class="text-center">
-          Lorem, ipsum.
-          <i class="fa fa-star text-primary" aria-hidden="true"></i>
+          Most Popular Products
+          <i class="fa fa-star text-warning" aria-hidden="true"></i>
         </h1>
         <small class="text-muted"
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quam.</small
+          >A small group of our high rated products .</small
         >
       </div>
       <div class="most_sell_container container h-75">
@@ -288,9 +287,9 @@
         >
           <p><small>#Fashion Wall</small></p>
           <div style="font-size:10vw">New Design 2020</div>
-          <div class="middle_screen_btn text-center mt-4">
+          <a href="category.html?category=clothes" class="middle_screen_btn text-center mt-4 text-white">
             Shop Now
-          </div>
+          </a>
         </div>
         <div class="middle_screen_holder">
           <img src="img/products/Walking-purple-wall.jpg" alt="" />
