update category and shop page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- images slider -->
     <div class="swiper-container">
-      <div class="buttons-wrapper">
+      <!-- <div class="buttons-wrapper">
         <div class="element_holder">
           <div class="element1">
             <div
@@ -115,17 +115,22 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <img
             class="slider1"
-            src="img/logo/logo.png"
+            src="img/scott-webb-M5PYMJ83OfE-unsplash.jpg"
             alt=""
             style="object-fit: cover; object-position: center;"
           />
-          <div class="caption"></div>
+          <div class="caption">
+            <div class="display-4">Technical Professional</div>
+            <p class="font-10 text-matte">
+              For Integrated solutions
+            </p>
+          </div>
         </div>
 
         <div class="swiper-slide">
@@ -316,7 +321,7 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h1>SAT</h1>
+                      <h3>SAT</h3>
                     </div>
                   </div>
                   <div
@@ -336,7 +341,7 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h1>SUN</h1>
+                      <h3>SUN</h3>
                     </div>
                   </div>
                   <div
@@ -356,7 +361,7 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h1>MON</h1>
+                      <h3>MON</h3>
                     </div>
                   </div>
                   <div
@@ -376,7 +381,7 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h1>TUE</h1>
+                      <h3>TUE</h3>
                     </div>
                   </div>
                   <div
@@ -396,7 +401,7 @@
                 <div class="line d-flex flex-row justify-content-between">
                   <div class="line_day_desc d-flex flex-row align-items-center">
                     <div class="line_day text-center">
-                      <h1>WED</h1>
+                      <h3>WED</h3>
                     </div>
                   </div>
                   <div
@@ -418,7 +423,7 @@
                     class="line_day_desc p-2 d-flex flex-row align-items-center"
                   >
                     <div class="line_day text-center pt-2">
-                      <h1>THU</h1>
+                      <h3>THU</h3>
                     </div>
                   </div>
                   <div
@@ -440,7 +445,7 @@
                     class="line_day_desc p-2 d-flex flex-row align-items-center"
                   >
                     <div class="line_day text-center pt-2">
-                      <h1>FRI</h1>
+                      <h3>FRI</h3>
                     </div>
                   </div>
                   <div
