update shopping_cart Page

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -95,13 +95,13 @@
         class="total_products border p-3 d-flex flex-row justify-content-around align-items-center"
       >
         <small class="text-dark pr-4">Total Products</small>
-        <b>2</b>
+        <b id="total_product">0</b>
       </div>
       <div
         class="total_quantites border p-3 d-flex flex-row justify-content-around align-items-center"
       >
         <small class="text-dark pr-4">Total Quantity</small>
-        <b>2</b>
+        <b class="total_quantity">0</b>
       </div>
       <div
         class="total_price border p-3 d-flex flex-row justify-content-around align-items-center"
@@ -255,6 +255,9 @@
     <!-- JS FILES -->
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.3.1.min.js"></script>
+
+    <!-- Email lib -->
+    <script src="lib/smtp.js"></script>
 
     <script src="js/shopping_cart.js"></script>
     <!-- scroll effect with navbar -->
