--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/shopping_cart.css" />
   </head>
@@ -89,7 +89,7 @@
     </div>
     <!-- Total  -->
     <div
-      class="total d-flex flex-row justify-content-around align-items-center p-2 w-100"
+      class="total row d-flex justify-content-lg-around justify-content-between align-items-center p-2 w-100"
     >
       <div
         class="total_products border p-3 d-flex flex-row justify-content-around align-items-center"
@@ -108,6 +108,14 @@
       >
         <small class="text-dark pr-4">Total Price</small>
         <b>$</b><b id="total_price">0</b>
+      </div>
+      <div
+        class="remove_all bg-danger p-3 d-flex flex-row justify-content-around align-items-cente"
+        style="cursor: pointer;"
+      >
+        <small class="text-white pr-4 d-flex align-items-center"
+          >Remove All</small
+        ><b class="text-white">X</b>
       </div>
     </div>
     <!-- End Total -->
