--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -103,6 +103,7 @@
         <small class="text-dark pr-4">Total Quantity</small>
         <b class="total_quantity">0</b>
       </div>
+      <div class="d-none w-100"></div>
       <div
         class="total_price border p-3 d-flex flex-row justify-content-around align-items-center"
       >
