--- a/category.html
+++ b/category.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/cat.css" />
 
@@ -122,12 +122,7 @@
         >
           <div class="cat_title_types d-inline">
             <div class="text-muted d-inline small-12">ALL TYPES</div>
-            <select name="" id="" class="d-inline text-muted border-0">
-              <option value=""></option>
-              <option value="">ads</option>
-              <option value="">a</option>
-              <option value="">da</option>
-              <option value="">da</option>
+            <select name="" id="types" class="d-inline text-muted border-0">
             </select>
           </div>
           <div
@@ -301,7 +296,7 @@
 
     <!-- data -->
     <script src="js/cat_data.js"></script>
-
+    <script src="js/cat_likes.js"></script>
     <!-- scroll effect with navbar -->
     <script src="js/nav_scrooler.js"></script>
     <script src="js/loader.js"></script>
