--- a/category.html
+++ b/category.html
@@ -109,6 +109,7 @@
           </div>
           <div class="cat_title">
             <div
+              id="cat_title_text"
               class="h3 p-5 text-dark text-muted d-flex flex-column justify-content-center align-items-center"
             >
               Clothsing & Fashion
@@ -197,25 +198,25 @@
 
                 <div class="d-flex flex-column justify-content-between pt-4">
                   <a
-                    href="#"
+                    href="category.html?category=Electronics"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Electronics</a
                   >
                   <a
-                    href="#"
+                    href="category.html?category=food"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Food</a
                   >
                   <a
-                    href="#"
+                    href="category.html?category=clothes"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Clothes</a
                   >
                   <a
-                    href="#"
+                    href="category.html?category=furniture"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Furnitures</a
@@ -293,6 +294,28 @@
 
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.3.1.min.js"></script>
+
+    <script>
+      var currentlocation = window.location.href;
+      var url = new URL(currentlocation);
+      var url_params = url.searchParams.get('category');
+
+      var title = document.getElementById('cat_title_text');
+      switch (url_params) {
+        case 'food':
+          title.innerHTML =
+            'Candded Tasts <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+          break;
+        case 'Electronics':
+          title.innerHTML =
+            'HouseHold & Electronics Tools <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+          break;
+        case 'furniture':
+          title.innerHTML =
+            'Interior Furnitures <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+          break;
+      }
+    </script>
 
     <!-- data -->
     <script src="js/cat_data.js"></script>
