--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="lib/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <!-- <link rel="stylesheet" href="css/loader.css" /> -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/cart.css" />
 
@@ -200,25 +200,25 @@
 
                 <div class="d-flex flex-column justify-content-between pt-4">
                   <a
-                    href="#"
+                    href="category.html?categody=Electronics"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Electronics</a
                   >
                   <a
-                    href="#"
+                    href="category.html?categody=food"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Food</a
                   >
                   <a
-                    href="#"
+                    href="category.html?categody=clothes"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Clothes</a
                   >
                   <a
-                    href="#"
+                    href="category.html?categody=furniture"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
                     >Furnitures</a
